# ecto_daft

./: CMakeLists.txt  CMakeLists.txt~  README.md  README.rst  package.xml  setup.py  stack.xml
apps/: daft_extractor.py
cells/: CMakeLists.txt  DAFT.cpp  DrawKeypoints3D.cpp
cells/daft/: CMakeLists.txt  CMakeLists.txt~  DAFT.cpp  module.cpp
install/: ecto_daft.rosinstall
python/ecto_daft/: __init__.py
test/: CMakeLists.txt  config_detection.tod.DAFT  config_training.tod.DAFT
