<package>
  <name>ecto_daft</name>
  <version>0.4.2</version>
  <description>Ecto bindings for the DAFT library.</description>
  <author email="dgossow@willowgarage.com">David Gossow</author>
  <maintainer email="dgossow@willowgarage.com">David Gossow</maintainer>
  <license>BSD</license>

  <url>https://ias.in.tum.de/people/gossow/rgbd</url>
  <build_depend>boost</build_depend>
  <build_depend>ecto</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>daft</build_depend>

  <run_depend>boost</run_depend>
  <run_depend>ecto</run_depend>
  <run_depend>opencv2</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
